--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fast-safe-stringify": "^2.1.1",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.15.1",
     "nestjs-pino": "^4.4.0",
     "nestjs-redoc": "^2.2.2",
