--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:revert": "pnpm run typeorm -- migration:revert -d libs/common/src/database/postgresql/typeorm.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.859.0",
     "@keyv/redis": "^4.4.0",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.1",
@@ -40,16 +41,20 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.2",
     "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cuid": "^3.0.0",
     "fast-safe-stringify": "^2.1.1",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "module-alias": "^2.2.3",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "nestjs-pino": "^4.4.0",
     "nestjs-redoc": "^2.2.2",
     "node-mailjet": "^6.0.8",
